samples/_failures_safe/1761340502_ba1560_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae3f8986.c: In function ‘main’:
./samples/SAFE/__tmp_ae3f8986.c:132:19: error: expected ‘;’ at end of input
  132 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_ae3f8986.c:132:13: error: expected declaration or statement at end of input
  132 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_ae3f8986.c:132:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ae3f8986.c:132:13: error: expected declaration or statement at end of input
